@@ -34,6 +34,12 @@ Release @version@-@release@ Start 02/01/2024 End XX/XX/XXXX
 17. smtpd.c: prepend '@' to helohost when doing dnscheck
 - 17/01/2024
 18. svctool.in: fixed permissions of /run/indimail/pwdlookup
+- 29/01/2024
+19. qmail.h: increased qmail-queue buffer to 8192 for performance
+    (qmail-queue)
+20. smtpd.c: fixed logerr() cloberring strnum
+21. use env variable ALLOW_BARELF to allow bare LF from smtp clients without
+    SMTP smuggling
 
 * Mon Jan 01 2024 18:55:50 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.6-1.1%{?dist}
 Release 3.0.6-1.1 Start 25/10/2023 End 01/01/2024
